Fixed issues that was cutting off

--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -200,7 +200,6 @@ svg.promo-svg {
 .intro-section {
     text-align:center;
     padding-top:240px;
-    height:540px;
     overflow:hidden;
     position:relative;
 
